--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Threshold Trilogy
 description: Anomalies, participation, and resonance
-theme: jekyll-theme-cayman  # Switch to this
+theme: jekyll-theme-minima  # Switch to this
 markdown: kramdown
 kramdown:
   math_engine: mathjax
