--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Threshold Trilogy
 description: Anomalies, participation, and resonance
-theme: jekyll-theme-cayman
+theme: jekyll-theme-primer
 markdown: kramdown
 kramdown:
   math_engine: mathjax  # Enables MathJax processing
