--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ description: Anomalies, participation, and resonance
 theme: jekyll-theme-primer
 markdown: kramdown
 kramdown:
-  math_engine: mathjax  # Enables MathJax processing
+  math_engine: mathjax
   input: GFM
